##########################################################################
# University of Illinois/NCSA Open Source License
#
# Copyright © 2003-2014, NCSA.  All rights reserved.
#
# Developed by:
#
# Storage Enabling Technologies (SET)
#
# Nation Center for Supercomputing Applications (NCSA)
#
# http://dims.ncsa.uiuc.edu/set/uberftp
#
# Permission is hereby granted, free of charge, to any person obtaining a
# copy of this software and associated documentation files (the .Software.),
# to deal with the Software without restriction, including without limitation
# the rights to use, copy, modify, merge, publish, distribute, sublicense,
# and/or sell copies of the Software, and to permit persons to whom the
# Software is furnished to do so, subject to the following conditions:
#
#    + Redistributions of source code must retain the above copyright notice,
#      this list of conditions and the following disclaimers.
#
#    + Redistributions in binary form must reproduce the above copyright
#      notice, this list of conditions and the following disclaimers in the
#      documentation and/or other materials provided with the distribution.
#
#    + Neither the names of SET, NCSA
#      nor the names of its contributors may be used to endorse or promote
#      products derived from this Software without specific prior written
#      permission.
#
# THE SOFTWARE IS PROVIDED .AS IS., WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
# IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
# FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT.  IN NO EVENT SHALL
# THE CONTRIBUTORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR
# OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE,
# ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER
# DEALINGS WITH THE SOFTWARE.
############################################################################

Sources= \
	cmds.c     filetree.c   ftp_s.h       logical.c  network.c  radix.h    \
	cmds.h     filetree.h   gsi.c         logical.h  network.h  settings.c \
	config.h   ftp.c        gsi.h         main.c     output.c   settings.h \
	errcode.c  ftp.h        misc.c        output.h   unix.c     unix.h     \
	errcode.h  ftp_s.c      linterface.h  misc.h     radix.c    nc.h       \
	nc.c       ftp_a.c      ftp_a.h       ftp_eb.c   ftp_eb.h   ml.c       \
	ml.h       cksum.c      cksum.h       perf.c     perf.h

uberftp_SOURCES=$(Sources)
bin_PROGRAMS=uberftp
man_MANS=uberftp.1

